# daisy-bridge

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/skills/daisy-bridge/: SKILL.md
.agents/skills/daisy-bridge/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: feature-module-implementation.md  serving-endpoint-and-ui-update.md
.claude/homunculus/instincts/inherited/: daisy-bridge-instincts.yaml
.claude/research/: daisy-bridge-research-playbook.md
.codex/: AGENTS.md
.omc/state/sessions/3d5a9651-4bd5-4051-85e1-3b808530b387/: last-tool-error-state.json  pre-tool-advisory-throttle.json
data/: corpus.jsonl  corpus.jsonl.npz
src/bridge_rag/: config.py  provenance.py  scripts_entry.py  types.py
src/bridge_rag/bridges/: attention.py  base.py  bottleneck.py  factory.py  gated.py  residual.py
src/bridge_rag/contracts/: budget.py  invariants.py  shape.py
src/bridge_rag/losses/: mi_estimator.py  regularization.py
src/bridge_rag/pipeline/: composition.py  lifecycle.py  orchestrator.py
src/bridge_rag/retrieval/: ann.py  corpus.py  dynamic_index.py
src/bridge_rag/serving/: app.py  schemas.py
src/bridge_rag/serving/static/: index.html
src/bridge_rag/sidecar/: base.py  extractor.py
src/bridge_rag/stages/: generation.py  generation_transformers.py  generation_vllm.py  inference.py  perception.py
src/bridge_rag/training/: distill.py  optimizer.py  stabilizers.py  trainer.py
src/bridge_rag/versioning/: blue_green.py
tests/: conftest.py  test_bridges.py  test_contracts.py  test_e2e.py  test_losses.py  test_no_hallucination.py  test_serving.py  test_six_jacobian.py  test_training.py  test_versioning.py
