[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-rag"
version = "0.1.0"
description = "Multi-stage neural network with learnable intermediate bridges (Bergo 2018 -> 2025 production RAG)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Marcus Bergo" }]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
# Heavy model/runtime deps. Kept out of the base install so the dev profile
# runs on a laptop. The code imports these lazily; absence => stub/fallback.
models = [
    "transformers>=4.40",
    "peft>=0.10",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
]
prod = [
    "transformers>=4.40",
    "peft>=0.10",
    "faiss-gpu>=1.8",
    "bitsandbytes>=0.43",
    "accelerate>=0.29",
    "sentence-transformers>=2.7",
    "vllm>=0.4",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
bridge-rag-corpus = "bridge_rag.scripts_entry:precompute_corpus_main"
bridge-rag-bench = "bridge_rag.scripts_entry:benchmark_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
